--- a/package.json
+++ b/package.json
@@ -25,9 +25,16 @@
         "eslint": "^8.57.0",
         "eslint-config-google": "^0.14.0",
         "eslint-plugin-react": "^7.34.1",
+        "lint-staged": "^15.2.2",
         "prettier": "3.2.5"
     },
     "dependencies": {
         "husky": "^9.0.11"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "npm run lint:fix",
+            "npm run prettier:fix"
+        ]
     }
 }
