--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "node src/server.js",
+        "dev": "nodemon --require dotenv/config src/server.js",
         "prepare": "husky",
         "prettier:fix": "npx prettier . --write",
         "lint:fix": "eslint src/"
@@ -29,7 +29,12 @@
         "prettier": "3.2.5"
     },
     "dependencies": {
-        "husky": "^9.0.11"
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "http-errors": "^2.0.0",
+        "husky": "^9.0.11",
+        "nodemon": "^3.1.0",
+        "winston": "^3.13.0"
     },
     "lint-staged": {
         "*.ts": [
