--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon --require dotenv/config src/server.js",
         "prepare": "husky",
         "prettier:fix": "npx prettier . --write",
-        "lint:fix": "eslint src/"
+        "lint:fix": "eslint src/",
+        "test": "jest --watch --runInBand"
     },
     "repository": {
         "type": "git",
@@ -25,8 +25,10 @@
         "eslint": "^8.57.0",
         "eslint-config-google": "^0.14.0",
         "eslint-plugin-react": "^7.34.1",
+        "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
-        "prettier": "3.2.5"
+        "prettier": "3.2.5",
+        "supertest": "^6.3.4"
     },
     "dependencies": {
         "dotenv": "^16.4.5",
